samples/_failures_safe/1761431724_0a5b02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5262857.c: In function ‘main’:
./samples/SAFE/__tmp_e5262857.c:119:9: error: expected expression at end of input
  119 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_e5262857.c:119:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5262857.c:119:9: error: expected declaration or statement at end of input
